--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 #banner{
-    background: linear-gradient(rgba(0,0,0,0.5),#009688),url(C:\Images/backgroundimg.jpg) ;
+    background: linear-gradient(rgba(0,0,0,0.5),#009688),url(backgroundimg.jpg) ;
     background-size:cover;
     background-position:center;
     height: 100vh;
